# Kons_challenge

./: CMakeLists.txt  CharParser.cpp  CharParser.h  Parser.cpp  Parser.h  Readme.md  StringParser.cpp  StringParser.h  input.txt  main.cpp
Parsers/: CharParser.h  Parser.h  StringParser.h
features/: count_pairs.feature
features/steps/: steps.py
myvenv/: pyvenv.cfg
